--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
+    "view-design": "^4.1.3",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
@@ -17,6 +20,8 @@
     "@vue/cli-plugin-router": "^4.3.0",
     "@vue/cli-plugin-vuex": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
+    "echarts-amap": "^1.4.15-rc.1",
+    "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
