--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "echarts": "^4.7.0",
+    "jquery": "^3.4.1",
     "view-design": "^4.1.3",
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
@@ -22,7 +23,7 @@
     "@vue/cli-plugin-vuex": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "echarts-amap": "^1.4.15-rc.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
